--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.1.1",
+    "compass-mixins": "^0.12.10",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng2-search-filter": "^0.4.7",
     "ng2-validation": "^4.2.0",
+    "ngx-pagination": "^3.1.1",
+    "ngx-toastr": "^8.8.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
